--- a/matui/static/index_dev.html
+++ b/matui/static/index_dev.html
@@ -17,8 +17,8 @@
 			style-src 'self' 'unsafe-inline';">
 	<title>KotiCloud</title>
 
-	<link rel="icon" href="/icons/ui/logo.svg">
-	<link rel="icon" href="/icons/ui/logo.png">
+	<link rel="icon" href="/icons/ui/cloud.svg">
+	<link rel="icon" href="/icons/ui/cloud.png">
 
 	<link rel="stylesheet" href="css/base.css">
 </head>
