Always raise a window when the user clicks inside it. Fixed cutting. Fixed changing to the next or previous image. Maximize windows to the document's scroll position. When closed, set video and audio to blank base64-encoded source. Fixed missing newline in client upload.

--- a/matui/static/index.html
+++ b/matui/static/index.html
@@ -11,7 +11,7 @@
 			font-src 'self';
 			img-src 'self';
 			manifest-src 'self';
-			media-src 'self';
+			media-src 'self' data:;
 			script-src 'self' 'unsafe-eval';
 			script-src-elem 'self';
 			style-src 'self' 'unsafe-inline';">
