--- a/matui/static/index_dev.html
+++ b/matui/static/index_dev.html
@@ -11,7 +11,7 @@
 			font-src 'self';
 			img-src 'self';
 			manifest-src 'self';
-			media-src 'self';
+			media-src 'self' data:;
 			script-src 'self' 'unsafe-eval';
 			script-src-elem 'self';
 			style-src 'self' 'unsafe-inline';">
