- Removed the development mode (not needed anymore) - Made CSP more strict

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 			img-src 'self';
 			manifest-src 'self';
 			media-src 'self' data:;
-			script-src 'self' 'unsafe-eval';
+			script-src 'self';
 			style-src 'self' 'unsafe-inline';">
 	<title>KotiCloud</title>
 
